      to synchronise the image acquisition with an other sensor.
      New setPanControl() function was introduced to set the PAN register 
      0x884 to control single or multiple image transmission from stereo 
      vision cameras like the PointGrey Bumblebee.
    - vpDot2: The tracking is restarted in vpDot2::track() if a dot is found 
      but is not valid.
    - In vpDisplay, new getKeyboardEvent() functionalities to handle key 
      events.
    - Optimization of the vpMatrix class.
  - Examples:
    - New plotting example in example/tools/plot.cpp
    - In grab1394Two.cpp example, addition of [-r] new option to reset the bus.
    - New examples to show how to build a 3D visual servoing without using the
      vpServo and vpFeature classes: servoSimu3D_cMcd_CamVelocityWithoutVpServo.cpp
      and servoSimu3D_cdMc_CamVelocityWithoutVpServo.cpp
  - Bug fixed
    - [7638] Memory leak in all vpFeature... classes was reopened
    - [7888] vpV4l2Grabber cannot acquire an image from an analog camera 
	     on Ubuntu 8.04 Hardy Heron
    - [7994] vpMeLine : initialization problem for horizontal lines
    - [8001] Coin and SoQt are not detected during CMake configuration
	     under Fedora 10
    - [8032] Link error whith GSL while compiling HelloWorld.cpp on OSX
    - [8225] Bug in the multiplication of a twist matrix (6x6) by a matrix (6xn)
    - [8248] Compilation error under Windows MSCV8 if deprecated functions 
	     are not build
    - [8249] Compilation error under Windows MSCV8 when building ViSP 
	     as a shared library (DLL)
    - [8257] Bug in vp1394TwoGrabber::resetBus()
    - [8259] Segfault in vpDisplayX
    - [8389] vpKltOpencv : Bug in the copy constructor
    - [8493] Problem to build ViSP as a dynamic library under windows (Visual C++)
    - [8495] Segmentation fault during the execution of the example grabDirectShow
    - [8831] Possible bug when extracting axis/angle from theta/u vector	
----------------------------------------------	